from 2.6.0 to 2.6.1
- fixed error in man page

from 2.5.x to 2.6.0
- new feature: support for binary delta in incremental/differential backups
  (relying on librsync)
- new feature: support ftp/sftp to read an archive from a cloud storage.
  (relying on libcurl)
  reading is optimized to not transfer a whole slice but only the needed
  part to proceed to the operation (restoration, listing, and so on)
- new feature: support ftp/sftp to write an archive eventually with hash
  files to a remote cloud storage (relying on libcurl)
- modified behavior: While creating a single sliced archive, DUC file is
  now executed unless user interrupted dar/libdar. This to stay coherent
  with multi sliced archive behavior
- new feature: display filters nature (-vmasks option)
- new feature: follow some symlinks as defined by the --ignored-as-symlink
  option
- new feature: one can define the compression algorithm a dar_manager
  database will use. This choice is only available at database creation
  using the new dar_manager's -z option. In particular "-z none" can be
  used to avoid using compression at all
- repair mode added to re-create a completed archive (suitable for direct
  access mode and merging) from an interrupted one due to lack of disk
  space, power outage or other reasons leading to similar problem.
- Dar can now only save metadata inode change without re-saving the whole
  file if its data has not changed. Dar_manager also handle this by
  restoring the full backup and then the inode metadata only when
  necessary.
- In regard to previous point, if you want to keep having dar saving the
  data when only metadata has changed use --modified-data-detection option
- moved dar_slave code into libdar as class libdar::libdar_slave
- moved dar_xform code into libdar as class libdar::libdar_xform
- added libdar_slave and libdar_xform in libdar API
- modified dar_xform and dar_slave to rely on new libdar API
- API: simplified user_interface class